feat: include self verification rules
Prompt 14: segunda checagem das respostas jurídicas críticas.

- VerifyAiAnalysisResponseUseCase confere, em uma chamada adicional, se a resposta
  é sustentada pelos trechos que ela citou. Confirmada, vira VERIFIED; não
  confirmada, vira FAILED com a confiança zerada. O texto original nunca é
  reescrito: a checagem sinaliza e explica.
- A checagem roda antes da transição para PENDING_HUMAN_REVIEW, através da porta
  AiAnalysisVerifier, para a resposta reprovada chegar ao revisor já sinalizada.
- Só perguntas críticas, vindas do modelo e com trecho citado, são verificadas. A
  lista é configurável e o conjunto mínimo vem da base de conhecimento.
- Uma checagem que não conclui deixa a resposta em NOT_VERIFIED: a etapa é extra e
  não pode impedir a demanda de chegar ao revisor.
- Migration V8 grava verification_status e verification_notes e semeia o prompt
  ANSWER_VERIFICATION v1.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>